--- a/prototype/src/assets/scss/components/_redirect-page.scss
+++ b/prototype/src/assets/scss/components/_redirect-page.scss
@@ -130,7 +130,7 @@
     margin-top: 20px;
     margin-bottom: 0;
     font-size: 12px;
-    color: rgba(255, 255, 255, 0.35);
+    color: rgba(255, 255, 255, 0.6);
 
     a {
         color: $primary-light;
