--- a/prototype/src/assets/scss/misc/_form-control.scss
+++ b/prototype/src/assets/scss/misc/_form-control.scss
@@ -97,7 +97,7 @@
 }
 
 .slug-counter {
-    color: rgba(255, 255, 255, 0.4);
+    color: rgba(255, 255, 255, 0.6);
     margin-left: auto;
     transition: color 0.2s ease;
 
